bugs (aligning): Looking for the alignment bug when screen smaller than Laptop

--- a/src/style.css
+++ b/src/style.css
@@ -23,6 +23,7 @@
 }
 
 body {
+    width: 100vw;
     padding: 0;
     margin: 0;
 }
